fix: snackbar alignment on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -211,3 +211,18 @@ ul {
       "cart-products .";
   }
 }
+
+@media screen and (max-width: 768px) {
+  .snackbar {
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: var(--margin-xl) auto;
+    padding: 0 var(--padding-xl);
+    border-radius: var(--border-radius-xs);
+    background-color: grey;
+    color: white;
+    z-index: 3;
+  }
+}
